# cosmwasm-contrat-minimal

./: Cargo.toml
.cargo/: config
schema/: contrat_tutoriel.json
src/: contract.rs  error.rs  lib.rs  msg.rs
src/contract/: execute.rs  instantiate.rs  query.rs
