[package]
name = "contrat_tutoriel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-schema = "1.1.8"
cosmwasm-std = "1.1.8"
cosmwasm-storage = "1.1.8"
cw2 = "1.0.0"
schemars = "0.8.11"
serde = {version = "1.0.148", default-features = false, features = ["derive"]}
thiserror = "1.0.37"
